Put cross street on same line as address in venue list adapter, added distance and # of people at venue (may tweak this some more).

--- a/main/res/layout/venue_list_item.xml
+++ b/main/res/layout/venue_list_item.xml
@@ -44,7 +44,9 @@
     android:layout_alignParentRight="true"
     android:layout_below="@id/venueName"
     android:paddingLeft="7dip"
-    android:textAppearance="@style/TextViewStyleVenueAddressListItem" />
+    android:textAppearance="@style/TextViewStyleVenueAddressListItem"
+    android:singleLine="true"
+    android:ellipsize="marquee" />
 
   <TextView
     android:id="@+id/venueLocationLine2"
