Updating some of the image resources with fancy new ones supplied courtesy of Mari, will continue polishing these.

--- a/main/res/drawable/user_details_activity_round_rect_badges.xml
+++ b/main/res/drawable/user_details_activity_round_rect_badges.xml
@@ -5,5 +5,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
   <padding android:left="7dip" android:top="1dip" android:right="7dip" android:bottom="1dip" />
   <corners android:radius="4dip" />
-  <solid android:color="#0000FF" />
+  <solid android:color="@color/blue_badges_mayor" />
 </shape>  
