--- a/main/res/layout/mayor_list_item.xml
+++ b/main/res/layout/mayor_list_item.xml
@@ -19,7 +19,7 @@
     android:padding="3dip"
     android:layout_marginLeft="7dip"
     android:layout_marginTop="5.5dip"
-    android:layout_marginRight="8.5dip"
+    android:layout_marginRight="7.5dip"
     android:layout_marginBottom="15dip"
     android:src="@drawable/blank_boy"
     android:gravity="center_vertical"
@@ -33,7 +33,7 @@
     android:layout_alignTop="@id/photo"
     android:layout_alignWithParentIfMissing="true"
     android:scaleType="fitXY" 
-    android:src="@drawable/crown"
+    android:src="@drawable/crown_small"
     android:layout_marginTop="2dip" />
 
   <TextView
