--- a/main/res/layout/user_actions_list_item.xml
+++ b/main/res/layout/user_actions_list_item.xml
@@ -7,18 +7,15 @@
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:gravity="center_vertical"
-  android:padding="5dip"
+  android:padding="10dip"
   > 
   
   <ImageView
     android:id="@+id/userActionsListItemIcon"
-    android:layout_height="46dip"
-    android:layout_width="46dip"
-    android:background="#186db5"
-    android:src="@drawable/blank_boy"
-    android:gravity="center_vertical"
+    android:layout_height="26dip"
+    android:layout_width="26dip"
     android:scaleType="fitXY" 
-    android:padding="2dip" />
+    android:gravity="center_vertical" />
       
   <TextView
     android:id="@+id/userActionsListItemLabel"
