--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -200,6 +200,7 @@
   <style name="TextViewStyleUserDetailsActivityNumBadgesTitle">
     <item name="android:textSize">11dip</item>
     <item name="android:textColor">@color/white</item>
+    <item name="android:textStyle">bold</item>
   </style>
  
   <style name="TextViewStyleUserDetailsActivityNumBadges">
