--- a/main/res/layout/user_actions_list_item.xml
+++ b/main/res/layout/user_actions_list_item.xml
@@ -19,8 +19,9 @@
       
   <TextView
     android:id="@+id/userActionsListItemLabel"
-    android:layout_width="wrap_content"
+    android:layout_width="0dip"
     android:layout_height="wrap_content"
+    android:layout_weight="1"
     android:textColor="@color/black_end"
     android:textAppearance="@android:style/TextAppearance.Small" 
     android:singleLine="true"
@@ -28,4 +29,12 @@
     android:layout_gravity="center_vertical" 
     android:paddingLeft="10dip" />
    
+  <ImageView
+    android:id="@+id/userActionsListItemDisclosure"
+    android:layout_height="9dip"
+    android:layout_width="13dip"
+    android:scaleType="fitXY" 
+    android:gravity="center_vertical"
+    android:layout_marginRight="7dip" />
+    
 </LinearLayout>
