Added 'last seen at' action item to user detail's page so friends can see venue page that friend is at. This will be replaced by a long-click listener in future versions perhaps from the FriendsActivity activity.

--- a/main/res/values/colors.xml
+++ b/main/res/values/colors.xml
@@ -36,4 +36,6 @@
         name="grey_end">#8C9DAE</color>
     <color
         name="blue_badges_mayor">#095b72</color>
+    <color
+        name="vlgrey">#EEEEEE</color>
 </resources>
