--- a/main/res/drawable/user_details_activity_tab_drawable.xml
+++ b/main/res/drawable/user_details_activity_tab_drawable.xml
@@ -19,7 +19,7 @@
     android:state_selected="true"
     android:state_pressed="false"
     android:state_enabled="true"
-    android:drawable="@color/white" />
+    android:drawable="@color/vlgrey" />
 
   <!-- Focused states -->
   <item 
@@ -34,7 +34,7 @@
     android:state_selected="true"
     android:state_pressed="false" 
     android:state_enabled="true"
-    android:drawable="@color/white" />
+    android:drawable="@color/blue_start" />
 
   <!-- Pressed -->
   <item 
