--- a/main/res/layout/user_actions_list_item.xml
+++ b/main/res/layout/user_actions_list_item.xml
@@ -14,8 +14,9 @@
     android:id="@+id/userActionsListItemIcon"
     android:layout_height="26dip"
     android:layout_width="26dip"
-    android:scaleType="fitXY" 
-    android:gravity="center_vertical" />
+    android:scaleType="fitCenter" 
+    android:gravity="center_vertical" 
+    android:layout_marginRight="10dip" />
       
   <TextView
     android:id="@+id/userActionsListItemLabel"
@@ -26,8 +27,7 @@
     android:textAppearance="@android:style/TextAppearance.Small" 
     android:singleLine="true"
     android:ellipsize="marquee"
-    android:layout_gravity="center_vertical" 
-    android:paddingLeft="10dip" />
+    android:layout_gravity="center_vertical" />
    
   <ImageView
     android:id="@+id/userActionsListItemDisclosure"
