Adding new checkin/shout classes. This was done in hopes of making things a little more modular. Will tighten up the post-checkin screen tomorrow, have some new stuff for it.

--- a/main/res/values/colors.xml
+++ b/main/res/values/colors.xml
@@ -38,4 +38,9 @@
         name="blue_badges_mayor">#095b72</color>
     <color
         name="vlgrey">#EEEEEE</color>
+    <color
+        name="color_score_list_adapter_highlight">#EEEEEE</color>
+    <color
+        name="color_score_mayor_section_background">#DDDDDD</color>
+        
 </resources>
