--- a/main/res/layout/checkin_result_dialog.xml
+++ b/main/res/layout/checkin_result_dialog.xml
@@ -1,74 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+  <!-- Copyright (c) Mark Wyszomierski, 2010. -->
+  
+  <!-- 
+    Server Message
+    List of badges          (SeparatedListAdapter) ...
+    List of scores items                             |
+           Score sub-total  (FooterView)           ...
+    Mayor block
+   -->
+
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/checkin_result"
-    android:layout_height="wrap_content"
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:id="@+id/checkin_result"
+  android:layout_width="fill_parent"
+  android:layout_height="wrap_content"
+  android:orientation="vertical"
+  android:background="@color/white"
+  >
+  
+  <TextView
+    android:id="@+id/textViewCheckinMessage"
     android:layout_width="fill_parent"
-    android:layout_below="@+id/dialog_title"
-    android:orientation="vertical"
->
+    android:layout_height="wrap_content"
+    android:textColor="#333"
+    android:paddingTop="5dip"
+    android:paddingLeft="5dip"
+    android:paddingRight="5dip"
+    android:paddingBottom="5dip" /> 
+  
+  <ListView
+    android:id="@+id/listViewCheckinBadgesAndScores"
+    android:layout_width="fill_parent"
+    android:layout_height="0dip"
+    android:layout_weight="1"
+    android:cacheColorHint="#00000000"
+    android:divider="#DDD"
+    android:dividerHeight="1dip" />
+    
+  <!-- Score total gets fixed here, if any score received for this checkin. -->
+  <LinearLayout
+    android:id="@+id/llCheckinScoreTotal"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:visibility="gone" >
+        
+    <ImageView
+      android:id="@+id/scoreIcon"
+      android:layout_width="36dip"
+      android:layout_height="36dip"
+      android:layout_margin="5dip"
+      android:scaleType="center"
+      android:layout_gravity="center_vertical" />
+      
     <TextView
-        android:id="@+id/score_message"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dip"
-        android:textAppearance="@android:style/TextAppearance.Small"
-        android:textColor="@color/black_end" />
-    <ListView
-        android:id="@+id/result_list"
-        android:layout_width="fill_parent"
-        android:layout_height="0dip"
-        android:cacheColorHint="#00000000"
-        android:layout_weight="0.5" />
-    <RelativeLayout
-        android:id="@+id/footer"
-        android:paddingTop="5dip"
-        android:paddingBottom="5dip"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
-        android:background="@drawable/black_gradient"
-        android:visibility="gone"
-    >
-        <TextView
-            android:id="@+id/totals"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/mayor_crown"
-            android:gravity="center"
-            android:textSize="18sp"
-            android:paddingLeft="10dip"
-            android:paddingRight="10dip"
-            android:visibility="gone"
-            android:textAppearance="@style/TextStyleWhite" />
-        <ImageView
-            android:id="@+id/photo"
-            android:layout_height="42dip"
-            android:layout_width="42dip"
-            android:layout_marginTop="28dip"
-            android:layout_marginBottom="5dip"
-            android:layout_marginLeft="8dip"
-            android:gravity="center_vertical"
-            android:src="@drawable/blank_boy"
-            android:visibility="gone" />
-        <ImageView
-            android:id="@+id/mayor_crown"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_marginLeft="5dip"
-            android:gravity="center_vertical"
-            android:src="@drawable/crown"
-            android:visibility="gone" />
-        <TextView
-            android:id="@+id/mayor_message"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/totals"
-            android:layout_alignTop="@id/photo"
-            android:layout_toRightOf="@id/photo"
-            android:gravity="center"
-            android:textSize="14sp"
-            android:padding="5dip"
-            android:visibility="gone"
-            android:textAppearance="@style/TextStyleWhite" />
-    </RelativeLayout>
+      android:layout_marginLeft="10dip"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:textAppearance="@android:style/TextAppearance.Small"
+      android:textColor="@color/black_end"
+      android:singleLine="true"
+      android:ellipsize="marquee"
+      android:layout_weight="1"
+      android:layout_gravity="center_vertical" 
+      android:text="Total for this checkin: "/>
+        
+    <TextView
+      android:id="@+id/textViewCheckinScoreTotal"
+      android:layout_width="wrap_content"
+      android:layout_height="fill_parent"
+      android:gravity="center"
+      android:textSize="20sp"
+      android:textStyle="bold"
+      android:paddingLeft="10dip"
+      android:paddingRight="10dip" 
+      android:textColor="@color/black_end" 
+      android:background="@color/color_score_list_adapter_highlight"
+      />
+  </LinearLayout>
+     
+  <LinearLayout
+    android:id="@+id/llCheckinMayorInfo"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:background="@color/color_score_mayor_section_background"
+    android:visibility="gone"
+    android:paddingLeft="7dip"
+    android:paddingRight="7dip"
+    android:paddingTop="9dip"
+    android:paddingBottom="7dip" >
+    
+    <ImageView
+      android:id="@+id/imageViewCheckinMayor"
+      android:layout_height="42dip"
+      android:layout_width="42dip"
+      android:gravity="center_vertical"
+      android:src="@drawable/blank_boy" />
+      
+    <TextView
+      android:id="@+id/textViewCheckinMayorMessage"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:gravity="center_vertical"
+      android:paddingLeft="10dip"
+      android:paddingRight="5dip"
+      android:paddingTop="5dip"
+      android:paddingBottom="5dip"
+      android:textColor="#333" />
+      
+  </LinearLayout>
+
 </LinearLayout>
