--- a/main/res/layout/score_list_item.xml
+++ b/main/res/layout/score_list_item.xml
@@ -1,39 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
+
     <!-- Copyright 2009 Joe LaPenna -->
+
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
-    android:orientation="horizontal"
->
-    <ImageView
-        android:id="@+id/scoreIcon"
-        android:layout_width="36dip"
-        android:layout_height="36dip"
-        android:layout_margin="5dip"
-        android:scaleType="center"
-        android:layout_gravity="center_vertical" />
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="fill_parent"
+  android:layout_height="?android:attr/listPreferredItemHeight"
+  android:orientation="horizontal" >
+  
+  <ImageView
+    android:id="@+id/scoreIcon"
+    android:layout_width="36dip"
+    android:layout_height="36dip"
+    android:layout_margin="5dip"
+    android:scaleType="center"
+    android:layout_gravity="center_vertical" />
+    
     <TextView
-        android:id="@+id/scoreDesc"
-        android:layout_marginLeft="10dip"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="@android:style/TextAppearance.Small"
-        android:textColor="@color/black_end"
-        android:singleLine="true"
-        android:ellipsize="marquee"
-        android:layout_weight="1"
-        android:layout_gravity="center_vertical" />
+      android:id="@+id/scoreDesc"
+      android:layout_marginLeft="10dip"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:textAppearance="@android:style/TextAppearance.Small"
+      android:textColor="@color/black_end"
+      android:singleLine="true"
+      android:ellipsize="marquee"
+      android:layout_weight="1"
+      android:layout_gravity="center_vertical" />
+        
     <TextView
-        android:id="@+id/scoreNum"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_marginLeft="2dip"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:paddingLeft="10dip"
-        android:paddingRight="10dip"
-        android:textAppearance="@style/TextStyleWhite"
-        android:background="@drawable/dgrey_gradient" />
+      android:id="@+id/scoreNum"
+      android:layout_width="wrap_content"
+      android:layout_height="fill_parent"
+      android:gravity="center"
+      android:textSize="20sp"
+      android:textStyle="bold"
+      android:paddingLeft="10dip"
+      android:paddingRight="10dip" 
+      android:textColor="@color/black_end" 
+      android:background="@color/color_score_list_adapter_highlight"
+      />
+
 </LinearLayout>
