--- a/main/res/layout/checkin_result_dialog.xml
+++ b/main/res/layout/checkin_result_dialog.xml
@@ -38,47 +38,6 @@
     android:divider="#DDD"
     android:dividerHeight="1dip" />
     
-  <!-- Score total gets fixed here, if any score received for this checkin. -->
-  <LinearLayout
-    android:id="@+id/llCheckinScoreTotal"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:visibility="gone" >
-        
-    <ImageView
-      android:id="@+id/scoreIcon"
-      android:layout_width="36dip"
-      android:layout_height="36dip"
-      android:layout_margin="5dip"
-      android:scaleType="center"
-      android:layout_gravity="center_vertical" />
-      
-    <TextView
-      android:layout_marginLeft="10dip"
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:textAppearance="@android:style/TextAppearance.Small"
-      android:textColor="@color/black_end"
-      android:singleLine="true"
-      android:ellipsize="marquee"
-      android:layout_weight="1"
-      android:layout_gravity="center_vertical" 
-      android:text="Total for this checkin: "/>
-        
-    <TextView
-      android:id="@+id/textViewCheckinScoreTotal"
-      android:layout_width="wrap_content"
-      android:layout_height="fill_parent"
-      android:gravity="center"
-      android:textSize="20sp"
-      android:textStyle="bold"
-      android:paddingLeft="10dip"
-      android:paddingRight="10dip" 
-      android:textColor="@color/black_end" 
-      android:background="@color/color_score_list_adapter_highlight"
-      />
-  </LinearLayout>
-     
   <LinearLayout
     android:id="@+id/llCheckinMayorInfo"
     android:layout_width="fill_parent"
@@ -108,6 +67,39 @@
       android:paddingTop="5dip"
       android:paddingBottom="5dip"
       android:textColor="#333" />
+      
+  </LinearLayout>
+  
+  
+  <LinearLayout
+    android:id="@+id/llCheckinExtras"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:background="#b8d324"
+    android:visibility="visible"
+    android:paddingLeft="7dip"
+    android:paddingRight="7dip"
+    android:paddingTop="9dip"
+    android:paddingBottom="7dip"
+    android:gravity="center" >
+
+    <TextView
+      android:id="@+id/textViewCheckinExtrasMessage"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:gravity="center_vertical"
+      android:paddingTop="5dip"
+      android:paddingBottom="5dip"
+      android:paddingRight="10dip"
+      android:textColor="#333"
+      android:text="Check out your SXSW stats here!" />
+      
+    <ImageView
+      android:layout_height="wrap_content"
+      android:layout_width="wrap_content"
+      android:gravity="center_vertical"
+      android:src="@drawable/arrow_white" />
       
   </LinearLayout>
 
