Fixed selected color on tabs for user details, also set 'share with friends' to default to true when setting not yet found in preferences store - this is relevant to the CheckinOrShoutGatherInfo activity.

--- a/main/res/drawable/user_details_activity_tab_drawable.xml
+++ b/main/res/drawable/user_details_activity_tab_drawable.xml
@@ -34,7 +34,7 @@
     android:state_selected="true"
     android:state_pressed="false" 
     android:state_enabled="true"
-    android:drawable="@color/blue_start" />
+    android:drawable="@color/vlgrey" />
 
   <!-- Pressed -->
   <item 
