--- a/main/res/values/arrays.xml
+++ b/main/res/values/arrays.xml
@@ -20,4 +20,18 @@
     <item>Places</item>
   </string-array>
   
+  <string-array
+    name="measurement_systems">
+    <item>Metric</item>
+    <item>Imperial</item>
+  </string-array>
+  
+  <!-- Don't change these for localization. -->
+  <!-- Would be better to use an integer array but: http://code.google.com/p/android/issues/detail?id=2096 -->
+  <string-array
+    name="measurement_systems_values">
+    <item>Metric</item>
+    <item>Imperial</item>
+  </string-array>
+  
 </resources>
