--- a/main/res/layout/badge_item.xml
+++ b/main/res/layout/badge_item.xml
@@ -6,12 +6,14 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center"
->
+    >
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="57dip"
+        android:layout_height="57dip"
+        android:scaleType="fitCenter"  
         android:src="@drawable/default_off" />
+        
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
