Added category icons to user history list, will replace shout icon with smaller version when available.

--- a/main/res/layout/history_list_item.xml
+++ b/main/res/layout/history_list_item.xml
@@ -6,40 +6,55 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
-  android:paddingLeft="15dip"
+  android:paddingLeft="8dip"
   android:paddingRight="8dip"
   android:paddingTop="5dip"
   android:paddingBottom="8dip"
-  android:orientation="vertical">
+  android:orientation="horizontal">
 
-  <!-- Should show venue name, if exists. -->
-  <TextView 
-    android:id="@+id/firstLine"
+  <ImageView
+    android:id="@+id/icon"
+    android:layout_width="32dip"
+    android:layout_height="32dip"
+    android:src="@drawable/ic_menu_shout"
+    android:scaleType="fitCenter"  
+    android:gravity="center_horizontal"
+    android:layout_marginTop="3dip" />
+    
+  <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:maxLines="1"
-    android:ellipsize="end"
-    android:paddingBottom="2dip"
-    android:textAppearance="@style/TextViewStyleCheckinListItemLineMessage" />
+    android:orientation="vertical" 
+    android:paddingLeft="8dip" >
     
-  <!-- Should show shout, if exists. -->
-  <TextView
-    android:id="@+id/shoutTextView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:paddingBottom="2dip"
-    android:maxLines="2"
-    android:ellipsize="end"
-    android:textAppearance="@style/TextViewStyleCheckinListItemLineShout" />
+    <!-- Should show venue name, if exists. -->
+    <TextView 
+      android:id="@+id/firstLine"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:paddingBottom="2dip"
+      android:textAppearance="@style/TextViewStyleCheckinListItemLineMessage" 
+      android:singleLine="true"
+      android:ellipsize="marquee"/>
     
-  <!-- Should show timestamp. -->
-  <TextView
-    android:id="@+id/timeTextView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:maxLines="1"
-    android:scrollHorizontally="true"
-    android:ellipsize="end"
-    android:textAppearance="@style/TextViewStyleCheckinListItemLineTimestamp" />
+    <!-- Should show shout, if exists. -->
+    <TextView
+      android:id="@+id/shoutTextView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:paddingBottom="2dip"
+      android:textAppearance="@style/TextViewStyleCheckinListItemLineShout" />
+    
+    <!-- Should show timestamp. -->
+    <TextView
+      android:id="@+id/timeTextView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:maxLines="1"
+      android:scrollHorizontally="true"
+      android:ellipsize="end"
+      android:textAppearance="@style/TextViewStyleCheckinListItemLineTimestamp" />
+
+  </LinearLayout>
 
 </LinearLayout>
