--- a/main/res/layout/checkin_list_item.xml
+++ b/main/res/layout/checkin_list_item.xml
@@ -41,7 +41,7 @@
       android:maxLines="1"
       android:ellipsize="end" />
     
-    <!-- Shout, if present. -->
+    <!-- Address, if present. -->
     <TextView
       android:id="@+id/secondLine"
       android:layout_width="wrap_content"
@@ -51,15 +51,13 @@
       android:scrollHorizontally="true"
       android:ellipsize="end" />
 
-    <!-- Address, if present. -->
+    <!-- Shout, if present. -->
     <TextView
       android:id="@+id/shoutTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingRight="3dip"
-      android:textAppearance="@style/TextViewStyleCheckinListItemLineShout"
-      android:maxLines="2"
-      android:ellipsize="end" />
+      android:textAppearance="@style/TextViewStyleCheckinListItemLineShout" />
     
     <!-- Timestamp. -->
     <TextView
