Used delayed submission of photo download requests for friend requests, helps if a user has hundreds of pending requests. Also formatted the photo frames to look the same as the rest of the app.

--- a/main/res/layout/add_friends_list_item.xml
+++ b/main/res/layout/add_friends_list_item.xml
@@ -23,14 +23,16 @@
     
     <ImageView
       android:id="@+id/addFriendListItemPhoto"
-      android:layout_height="46dip"
-      android:layout_width="46dip"
-      android:background="#186db5"
+	  android:layout_height="46dip"
+	  android:layout_width="46dip"
+      android:background="@drawable/photo_background"
+      android:layout_alignParentTop="true"
+      android:layout_alignParentLeft="true"
+      android:padding="3dip"
       android:src="@drawable/blank_boy"
       android:gravity="center_vertical"
-      android:scaleType="fitXY" 
-   	  android:padding="2dip" />
-      
+      android:scaleType="fitXY" />
+
     <TextView
       android:id="@+id/addFriendListItemName"
       android:layout_width="wrap_content"
