Added support for marking a tip as todo or done, fixed up tipactivity a bit to look nicer.

--- a/main/res/layout/tip_activity_desc_list_item.xml
+++ b/main/res/layout/tip_activity_desc_list_item.xml
@@ -14,15 +14,16 @@
     android:id="@+id/tipActivityDescListItemLabel1"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:textColor="@color/black_end"
-    android:textAppearance="@android:style/TextAppearance.Small" 
-    android:singleLine="true" />
+    android:textAppearance="@style/TextViewStyleTipActivityVenueName" 
+    android:singleLine="true"
+    android:paddingBottom="10dip" />
       
   <TextView
     android:id="@+id/tipActivityDescListItemLabel2"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:textColor="@color/black_end"
-    android:textAppearance="@android:style/TextAppearance.Small" />
+    android:textAppearance="@android:style/TextAppearance.Small"
+    android:paddingBottom="5dip" />
    
 </LinearLayout>
