--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -214,6 +214,11 @@
     <item name="android:textColor">@color/dgrey_end</item>
     <item name="android:textStyle">bold</item>
   </style>
+  
+  <style name="TextViewStyleTipActivityVenueName">
+    <item name="android:textSize">15dip</item>
+    <item name="android:textColor">@color/blue_start</item>
+  </style>
  
   <!-- Provides a transparent background for an activity. Without inheriting from this
        base theme style, 1.5 makes the background solid black instead of transparent.
