--- a/main/res/layout/tip_activity.xml
+++ b/main/res/layout/tip_activity.xml
@@ -33,15 +33,11 @@
       
     <TextView 
       android:id="@+id/tipActivityName" 
-      android:layout_width="wrap_content" 
+      android:layout_width="0dip" 
       android:layout_height="wrap_content"
+      android:layout_weight="1"
       android:paddingLeft="8dip"
       android:textAppearance="@style/TextViewStyleUserDetailsActivityTitle" />
-        
-    <LinearLayout 
-      android:layout_width="0dip" 
-      android:layout_height="fill_parent"
-      android:layout_weight="1" />
       
     <LinearLayout 
       android:layout_width="wrap_content" 
