--- a/main/res/layout/venue_view.xml
+++ b/main/res/layout/venue_view.xml
@@ -9,7 +9,10 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:padding="10dip"
+    android:paddingLeft="10dip"
+    android:paddingTop="10dip"
+    android:paddingBottom="10dip"
+    android:paddingRight="3dip"
     android:layout_marginBottom="6dip" >
   
     <LinearLayout
@@ -40,7 +43,8 @@
       <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-  	    android:orientation="horizontal" >
+  	    android:orientation="horizontal"
+  	    android:paddingTop="5dip" >
         <LinearLayout
           android:layout_width="0dip"
           android:layout_height="wrap_content"
@@ -72,6 +76,7 @@
       android:src="@drawable/special_banners"
       android:scaleType="fitCenter" 
       android:visibility="gone"
+      android:layout_marginRight="3dip"
       />
       
   </LinearLayout>
