--- a/main/res/layout/venue_view.xml
+++ b/main/res/layout/venue_view.xml
@@ -9,10 +9,10 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    android:paddingLeft="10dip"
+    android:paddingLeft="7dip"
     android:paddingTop="10dip"
     android:paddingBottom="10dip"
-    android:paddingRight="3dip"
+    android:paddingRight="7dip"
     android:layout_marginBottom="6dip" >
   
     <LinearLayout
@@ -26,7 +26,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/black_end"
-        android:textAppearance="@android:style/TextAppearance.Medium" />
+        android:textAppearance="@style/TextViewStyleVenueActivityVenueName" />
       <TextView
         android:id="@+id/internal_venueLocationLine1"
         android:layout_width="fill_parent"
@@ -45,18 +45,15 @@
         android:layout_height="wrap_content"
   	    android:orientation="horizontal"
   	    android:paddingTop="5dip" >
-        <LinearLayout
-          android:layout_width="0dip"
-          android:layout_height="wrap_content"
-  	      android:layout_weight="1" />
+  	    
         <Button
           android:id="@+id/internal_checkinButton"
-          android:layout_width="wrap_content"
+          android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:enabled="false"
           android:visibility="gone" 
-          android:layout_alignParentRight="true"
           style="@style/venueQuickCheckinStyle" />
+          
       </LinearLayout>
       
     </LinearLayout>
@@ -76,7 +73,7 @@
       android:src="@drawable/special_banners"
       android:scaleType="fitCenter" 
       android:visibility="gone"
-      android:layout_marginRight="3dip"
+      android:layout_marginRight="7dip"
       />
       
   </LinearLayout>
