--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -81,17 +81,11 @@
   <style
     name="venueQuickCheckinStyle">
     <item
-      name="android:paddingTop">0dip</item>
+      name="android:background">@drawable/checkin_button</item>
     <item
-      name="android:paddingBottom">0dip</item>
+      name="android:text">@string/venue_activity_checkin_button</item>
     <item
-      name="android:paddingLeft">16dip</item>
-    <item
-      name="android:background">@drawable/quick_checkin_states</item>
-    <item
-      name="android:text">Quick-Checkin</item>
-    <item
-      name="android:textAppearance">@android:style/TextAppearance.Small</item>
+      name="android:textAppearance">@android:style/TextAppearance.Medium</item>
     <item
       name="android:shadowColor">#111111</item>
     <item
@@ -100,6 +94,10 @@
       name="android:shadowDy">1</item>
     <item
       name="android:textColor">@android:color/white</item>
+    <item
+      name="android:padding">5dip</item>
+    <item
+      name="android:textStyle">bold</item>
   </style>
 
   <style
@@ -220,6 +218,12 @@
     <item name="android:textColor">@color/blue_start</item>
   </style>
  
+  <style name="TextViewStyleVenueActivityVenueName">
+    <item name="android:textSize">18dip</item>
+    <item name="android:textColor">#000</item>
+    <item name="android:textStyle">bold</item>
+  </style>
+  
   <!-- Provides a transparent background for an activity. Without inheriting from this
        base theme style, 1.5 makes the background solid black instead of transparent.
    -->
