Updated with new icons from Roman Nurik. Added a footer to NearbyVenueActivities which does a reverse geo-code of the location used for the venue search. This should give the user an idea of where we think they are, and help us with support (hopefully).

--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -224,6 +224,11 @@
     <item name="android:textStyle">bold</item>
   </style>
   
+  <style name="TextViewStyleUserReverseGeoLocation">
+    <item name="android:textSize">11dip</item>
+    <item name="android:textColor">#FFF</item>
+  </style>
+  
   <!-- Provides a transparent background for an activity. Without inheriting from this
        base theme style, 1.5 makes the background solid black instead of transparent.
    -->
