--- a/main/res/layout/loadable_list_activity.xml
+++ b/main/res/layout/loadable_list_activity.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge
+<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
+  android:id="@+id/main"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
 
   <ListView
     android:id="@android:id/list"
-    android:layout_height="fill_parent"
+    android:layout_height="0dip"
     android:layout_width="fill_parent"
+    android:layout_weight="1"
     android:drawSelectorOnTop="false"
     android:scrollbars="vertical" />
 
@@ -18,4 +20,4 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" />
 
-</merge>
+</LinearLayout>
