First pass at adding follower support for checkins.

--- a/main/res/layout/checkin_or_shout_gather_info_activity.xml
+++ b/main/res/layout/checkin_or_shout_gather_info_activity.xml
@@ -24,6 +24,15 @@
       />
   
     <CheckBox  
+      android:id="@+id/checkboxTellFollowers" 
+      android:layout_width="fill_parent" 
+      android:layout_height="wrap_content"
+      android:text="@string/tell_followers"
+      android:textColor="#333"
+      android:visibility="gone"
+      />
+      
+    <CheckBox  
       android:id="@+id/checkboxTellTwitter" 
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
