--- a/main/res/xml/preferences.xml
+++ b/main/res/xml/preferences.xml
@@ -49,6 +49,13 @@
       android:entries="@array/startup_tabs" 
       android:entryValues="@array/startup_tabs_values"
       android:defaultValue="Friends" />
+    <CheckBoxPreference 
+      android:key="cache_geolocation_for_searches"
+      android:persistent="true" 
+      android:title="@string/preferences_cache_geo_loc_for_searches_title"
+      android:summaryOn="@string/preferences_cache_geo_loc_for_searches_on"
+      android:summaryOff="@string/preferences_cache_geo_loc_for_searches_off"
+      android:defaultValue="true" />
     <com.joelapenna.foursquared.preferences.ClickPreference
       android:key="changelog"
       android:title="@string/preferences_changelog"
