--- a/main/res/layout/loadable_list_activity_with_view.xml
+++ b/main/res/layout/loadable_list_activity_with_view.xml
@@ -4,7 +4,8 @@
   android:id="@+id/main"
   android:orientation="vertical"
   android:layout_width="fill_parent"
-  android:layout_height="fill_parent">
+  android:layout_height="fill_parent"
+  android:background="@color/white" >
 
   <ListView
     android:id="@android:id/list"
@@ -17,14 +18,21 @@
   <LinearLayout
     android:id="@android:id/empty"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent" >
     
+    <LinearLayout
+      android:id="@+id/loadableListHolder"
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent" >
+      
       <include
-        android:id="@+id/loadableListEmpty"
+        android:id="@android:id/empty"
         layout="@layout/empty_loading"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
       
+    </LinearLayout>
+        
   </LinearLayout>
 
 </LinearLayout>
