--- a/main/res/layout/add_friends_invite_non_foursquare_user_list_item.xml
+++ b/main/res/layout/add_friends_invite_non_foursquare_user_list_item.xml
@@ -11,47 +11,43 @@
   android:gravity="center_vertical"
   android:paddingRight="12dip"
   android:paddingTop="5dip"
-  android:paddingBottom="5dip"
+  android:paddingBottom="5dip" 
   android:paddingLeft="10dip"
   > 
   
-  <LinearLayout
+  <LinearLayout 
     android:id="@+id/addFriendListItemClickableArea"
     android:layout_width="0dip"
     android:layout_height="wrap_content"
     android:layout_weight="1"
-    android:orientation="horizontal"> 
+    android:orientation="vertical"> 
     
-    <ImageView
-      android:id="@+id/addFriendListItemPhoto"
-	  android:layout_height="46dip"
-	  android:layout_width="46dip"
-      android:background="@drawable/photo_background"
-      android:layout_alignParentTop="true"
-      android:layout_alignParentLeft="true"
-      android:padding="3dip"
-      android:src="@drawable/blank_boy"
-      android:gravity="center_vertical"
-      android:scaleType="fitXY" />
-
     <TextView
-      android:id="@+id/addFriendListItemName"
+      android:id="@+id/addFriendNonFoursquareUserListItemName"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textColor="@color/black_end"
       android:textAppearance="@android:style/TextAppearance.Small" 
       android:singleLine="true"
       android:ellipsize="marquee"
-      android:layout_gravity="center_vertical" 
-      android:paddingLeft="10dip" />
+      android:layout_gravity="center_vertical" />
+      
+    <TextView
+      android:id="@+id/addFriendNonFoursquareUserListItemEmail"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:textColor="@color/black_end"
+      android:textAppearance="@android:style/TextAppearance.Small" 
+      android:singleLine="true"
+      android:layout_gravity="center_vertical" />
    
    </LinearLayout>  
       
   <Button
-    android:id="@+id/addFriendListItemAddButton"
+    android:id="@+id/addFriendNonFoursquareUserListItemBtn"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textAppearance="@android:style/TextAppearance.Small" 
-    android:text="Add" />
-    
+    android:text="Invite" />
+     
 </LinearLayout>
